# ResearchProgram

.devcontainer/: .env  Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: rust-code-auto-review.yml  ts-code-auto-review.yml
csv_to_graph/: Cargo.toml  gl_frame_times_1.csv  gl_frame_times_2.csv  gl_frame_times_3.csv  ts_frame_times_1.csv  ts_frame_times_2.csv  ts_frame_times_3.csv  wasm_frame_times.csv  wasm_frame_times_1.csv  wasm_frame_times_2.csv  wasm_frame_times_3.csv
csv_to_graph/src/: main.rs
deploy-project/: index.html  package-lock.json  package.json  tsconfig.app.json  tsr.config.json  vercel-build.sh  vite.config.ts
deploy-project/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
deploy-project/src/components/: App.tsx  gl.tsx  ts-wgpu.tsx  wasm.tsx
deploy-project/src/graphics/gl/: animate.ts
deploy-project/src/hooks/: useInView.ts
deploy-project/src/routes/: __root.tsx  index.lazy.tsx  ts-gl.tsx  ts-gpu.tsx  wasm-gpu.tsx
deploy-project/wasm/: .env  Cargo.toml  build.bash  lint.bash
deploy-project/wasm/.devcontainer/: devcontainer.json
deploy-project/wasm/src/: browser_shader.wgsl  build.rs  env.rs  instance.rs  lib.rs  state.rs  uniform.rs
rust-pentagram/: README.md
rust-pentagram/.devcontainer/: Dockerfile  devcontainer.json
rust-pentagram/workspace/: Cargo.toml  index.html
rust-pentagram/workspace/src/: build.rs  instance.rs  lib.rs  state.rs  vertex.rs
typescript-pentagram-rotate/: biome.json  index.html  package-lock.json  package.json
typescript-pentagram-rotate/src/: fallingAndRandomGenerator.ts  main.ts  style.css  vite-env.d.ts
(+10 files in other folders)
