[package]
name = "rust-pentagram"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
log = "0.4.22"
pollster = "0.4.0"
wgpu = { version = "24.0.1", features = ["wgsl", "webgpu"] }
winit = { version = "0.29.15", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24.0.1", default-features = false, features = ["webgl","wgsl"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.76", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    "HtmlDivElement",
    'CanvasRenderingContext2d',
    "Storage",
] }
web-time = "1.1.0"
wee_alloc = "0.4.5"
serde_json = {version = "1.0.138",default-features = false,features = ["alloc"]}
getrandom = { version = "0.2.15",features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }



[build-dependencies]
dotenvy = "0.15.7"

[target.'cfg(target_arch = "wasm32")'.features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-pentagram-lib"
path = "src/lib.rs"

[package.metadata.cargo-machete]
ignored = ["prost"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-mutable-globals', '--strip-producers', '--strip-debug']
